Reader now working with chars instead Strings. Add annotations. Some refactoring.